# retro-engine

./: .gitignore  CMakeLists.txt  README.md  build.sh  default.cfg
src/: main.cpp
src/framework/: Config.cpp  Config.h  Entity.cpp  Entity.h  Initialization.cpp  Initialization.h  Input.cpp  Input.h  PlayerController.cpp  PlayerController.h  Render.cpp  Render.h  RenderWindow.cpp  RenderWindow.h  Shoot.cpp  Shoot.h  Stage.cpp  Stage.h  Start.cpp  Start.h
src/framework/graphic/: Camera.cpp  Camera.h  FrameRate.cpp  FrameRate.h
src/framework/physic/: collision.cpp  collision.h
src/game/: ConfigurationGame.cpp  ConfigurationGame.h  Game.cpp  Game.h  InputGame.cpp  InputGame.h  Player.cpp  Player.h
